fix(home): fix strip title alignment
rescued the title strip effect after it was lost

--- a/assets/css/tail.css
+++ b/assets/css/tail.css
@@ -1163,6 +1163,14 @@ video {
   margin-top: 1rem;
 }
 
+.mt-\[0\.1rem\] {
+  margin-top: 0.1rem;
+}
+
+.mt-\[0\.2rem\] {
+  margin-top: 0.2rem;
+}
+
 .block {
   display: block;
 }
@@ -1315,12 +1323,20 @@ video {
   align-items: flex-start;
 }
 
+.items-end {
+  align-items: flex-end;
+}
+
 .items-center {
   align-items: center;
 }
 
 .items-baseline {
   align-items: baseline;
+}
+
+.justify-start {
+  justify-content: flex-start;
 }
 
 .justify-center {
@@ -1540,6 +1556,11 @@ video {
   font-variant-numeric: var(--tw-ordinal) var(--tw-slashed-zero) var(--tw-numeric-figure) var(--tw-numeric-spacing) var(--tw-numeric-fraction);
 }
 
+.text-\[\#4b21f2\] {
+  --tw-text-opacity: 1;
+  color: rgb(75 33 242 / var(--tw-text-opacity, 1));
+}
+
 .text-purple-700 {
   --tw-text-opacity: 1;
   color: rgb(126 34 206 / var(--tw-text-opacity, 1));
@@ -1647,31 +1668,44 @@ video {
   animation: var(--motion-all-loop-and-enter-animations);
 }
 
-.hover\:z-10:hover {
-  z-index: 10;
+.hover\:scale-x-105:hover {
+  --tw-scale-x: 1.05;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .hover\:no-underline:hover {
   text-decoration-line: none;
 }
 
-.hover\:motion-scale-out-110:hover {
-  --motion-end-scale-x: 1.1;
-  --motion-end-scale-y: 1.1;
-  --motion-scale-out-animation: motion-scale-out calc(var(--motion-scale-duration) * var(--motion-scale-perceptual-duration-multiplier)) var(--motion-scale-timing) var(--motion-scale-delay) both;
-  animation: var(--motion-all-exit-animations);
+.group\/link:hover .group-hover\/link\:mt-\[0\.4rem\] {
+  margin-top: 0.4rem;
 }
 
-.group\/link:hover .group-hover\/link\:mt-2 {
-  margin-top: 0.5rem;
+.group\/link:hover .group-hover\/link\:mt-\[0\.3rem\] {
+  margin-top: 0.3rem;
 }
 
-.group\/link:hover .group-hover\/link\:h-\[1\.1rem\] {
-  height: 1.1rem;
+.group\/link:hover .group-hover\/link\:h-\[1\.2rem\] {
+  height: 1.2rem;
 }
 
 .group\/link:hover .group-hover\/link\:translate-x-\[4\.6rem\] {
   --tw-translate-x: 4.6rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.group\/link:hover .group-hover\/link\:translate-x-\[4\.7rem\] {
+  --tw-translate-x: 4.7rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.group\/link:hover .group-hover\/link\:translate-x-\[4\.8rem\] {
+  --tw-translate-x: 4.8rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.group\/link:hover .group-hover\/link\:translate-x-\[5\.0rem\] {
+  --tw-translate-x: 5.0rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1681,6 +1715,24 @@ video {
 
 .group\/stripe:hover .group-hover\/stripe\:motion-translate-x-out-\[3\.9rem\] {
   --motion-end-translate-x: 3.9rem;
+  --motion-translate-out-animation: motion-translate-out calc(var(--motion-translate-duration) * var(--motion-translate-perceptual-duration-multiplier)) var(--motion-translate-timing) var(--motion-translate-delay) both;
+  animation: var(--motion-all-exit-animations);
+}
+
+.group\/stripe:hover .group-hover\/stripe\:motion-translate-x-out-\[4rem\] {
+  --motion-end-translate-x: 4rem;
+  --motion-translate-out-animation: motion-translate-out calc(var(--motion-translate-duration) * var(--motion-translate-perceptual-duration-multiplier)) var(--motion-translate-timing) var(--motion-translate-delay) both;
+  animation: var(--motion-all-exit-animations);
+}
+
+.group\/stripe:hover .group-hover\/stripe\:motion-translate-x-out-\[4\.1rem\] {
+  --motion-end-translate-x: 4.1rem;
+  --motion-translate-out-animation: motion-translate-out calc(var(--motion-translate-duration) * var(--motion-translate-perceptual-duration-multiplier)) var(--motion-translate-timing) var(--motion-translate-delay) both;
+  animation: var(--motion-all-exit-animations);
+}
+
+.group\/stripe:hover .group-hover\/stripe\:motion-translate-x-out-\[4\.3rem\] {
+  --motion-end-translate-x: 4.3rem;
   --motion-translate-out-animation: motion-translate-out calc(var(--motion-translate-duration) * var(--motion-translate-perceptual-duration-multiplier)) var(--motion-translate-timing) var(--motion-translate-delay) both;
   animation: var(--motion-all-exit-animations);
 }
